[tool.poetry]
name = "spacetu-web"
version = "0.1.0"
description = ""
authors = ["fsilavong <fransilavong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
